<resources>
    <string name="app_name">Comic Book</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_get_started_create_your_account">Let’s get started! Create your account.</string>
    <string name="phone_number">Phone number (Optional)</string>
    <string name="create_password">Create password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="new_post">New Post</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="new_update">New update</string>
    <string name="trending">Trending</string>
    <string name="top_readers">Top Readers</string>
    <string name="choose_your_genre_to_find_category_titles_here">Choose your genre to find Category titles here!</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="enter_your_title">Enter your title</string>
    <string name="enter_your_category">Enter your Category</string>
    <string name="choose_file">Choose File</string>
    <string name="price">Price</string>
    <string name="paid_free">Paid/free</string>
    <string name="enter_story_here">Enter story here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="i_m_student_from_ukraine_i_have_been_a_resident_of_atom_space_for_4_years_now">I`m student from Ukraine. I have been a resident of Atom Space for 4 years now...</string>
    <string name="reviews">Reviews</string>
    <string name="rate">Rate</string>
    <string name="start">Start</string>
    <string name="choose_thumbnail">Choose Thumbnail</string>
    <string name="selected_1_file">1 file selected</string>
    <string name="selected_multiple_files">%s files selected</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="pay">Pay</string>
    <string name="favorite">Favorite</string>
    <string name="favourite">Favourite</string>
    <string name="number">Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc">CVC</string>
    <string name="the_united_kingdom">The United Kingdom</string>
    <string name="zip">ZIP</string>
</resources>