<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView7"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/create_post"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/box_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:startIconDrawable="@drawable/title_ico">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryInputLayout"
                style="@style/box_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:startIconDrawable="@drawable/group">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:focusableInTouchMode="false"
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_category" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/chooseFileInputLayout"
                style="@style/box_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryInputLayout"
                app:startIconDrawable="@drawable/choose_file">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/btn_choose_thumbnail"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_thumbnail" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceFileInputLayout"
                style="@style/box_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/paidFileInputLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseFileInputLayout"
                app:startIconDrawable="@drawable/title_ico">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/price" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paidFileInputLayout"
                style="@style/box_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/priceFileInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/chooseFileInputLayout"
                app:startIconDrawable="@drawable/title_ico">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/select_premium"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/paid_free" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/storyFileInputLayout"
                style="@style/box_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceFileInputLayout"
                app:startIconDrawable="@drawable/outline_menu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/story_summary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:hint="@string/enter_story_here" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/chooseInputLayout"
                style="@style/box_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyFileInputLayout"
                app:startIconDrawable="@drawable/choose_file">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/btn_choose_files"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_file" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingVertical="14dp"
                android:text="@string/post"
                android:textAllCaps="false"
                app:backgroundTint="@color/submit_button"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseInputLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>