<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView7"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/create_post"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:srcCompat="@drawable/sample_dp" />

            <TextView
                android:id="@+id/name"
                style="@style/regular_text"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="Name"
                android:maxLines="1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/profilePic"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit"
                app:layout_constraintStart_toEndOf="@+id/profilePic"
                app:layout_constraintTop_toTopOf="@+id/profilePic" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                app:cornerRadius="5dp"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/name"
                app:strokeColor="@color/black" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/i_m_student_from_ukraine_i_have_been_a_resident_of_atom_space_for_4_years_now"
                app:layout_constraintEnd_toEndOf="@+id/btn_edit"
                app:layout_constraintStart_toStartOf="@+id/profilePic"
                app:layout_constraintTop_toBottomOf="@+id/profilePic" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/reviews"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_12sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:spanCount="2"
                android:layout_marginBottom="?actionBarSize"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/card_grid_large_row" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>